Update JVM options and Gatling configuration (#1)
* Reduce number of websocket connections

* Use ZGC with a preallocated JVM heap for the client and servers

* Update JVM options for the client and servers

* Update the simulation

* Update JVM options

* Update JVM options

* Update the simulation

* Update Gatling configuration

* Update Gatling configuration